--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %} {% block content %}
 <div class="signup">
     <h1>Sign Up here</h1>
-    <form action="index.html" method="POST" class="signup-form">
-        {{form}}
+    <form action=" {% url 'accounts:signup' %} " method="POST" class="site-form">
+        {% csrf_token %} {{form}}
         <input type="submit" value="Signup">
     </form>
 </div>
