--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,17 +7,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Djangonautic | Articles</title>
+    <title>Djangonautic | {{title}} </title>
     <link rel="stylesheet" href=" {% static 'styles.css' %} ">
 </head>
 
 <body>
-    <a href=" {% url 'articles:list' %} ">
-        <img src=" {% static 'logo.png' %} " alt="Home">
-    </a>
+    <header class="wrapper">
+        <a href=" {% url 'home' %} ">
+            <img src=" {% static 'logo.png' %} " alt="Home">
+        </a>
+        <nav>
+            <ul>
+                {% if user.is_authenticated %}
+                <li>
+                    <form action=" {% url 'accounts:logout' %} " method="POST">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                    </form>
+                    <li>
+                        <a href="{% url 'articles:create' %}" class="highlight">Create</a>
+                    </li>
+                </li>
+                {% else %}
+                <li>
+                    <a href="{% url 'accounts:login' %}">Login</a>
+                </li>
+                <li>
+                    <a href="{% url 'accounts:signup' %}">Signup</a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </header>
+
     <div class="wrapper">
         {% block content %} {% endblock %}
     </div>
+    <script src="{% static 'slugify.js' %}"></script>
 </body>
 
 </html>
