--- a/articles/templates/articles/articleDetail.html
+++ b/articles/templates/articles/articleDetail.html
@@ -3,6 +3,7 @@
     <div class="article">
         <img src="{{article.thumbnail.url}}" alt="">
         <h2> {{article.title}} </h2>
+        <h3>Written by {{article.author}} </h3>
         <p> {{article.body}} </p>
         <p> {{article.date}} </p>
     </div>
