--- a/articles/templates/articles/articleList.html
+++ b/articles/templates/articles/articleList.html
@@ -1,12 +1,13 @@
 {% extends 'layout.html' %} {% block content %}
 <h1>Article List</h1>
 
-<div class="article-list">
+<div class="articles">
     {% for article in articles %}
     <div class="article">
         <h2><a href=" {% url 'articles:detail' slug=article.slug %} "> {{ article.title }} </a></h2>
         <p> {{ article.snippet }} </p>
         <p> {{ article.date }} </p>
+        <p class="author"> Written by {{article.author.username}} </p>
     </div>
     {% endfor %}
 
